--- a/boda/src/index.html
+++ b/boda/src/index.html
@@ -1,9 +1,9 @@
 <html>
  <head>
   <link rel="stylesheet" href="style.css"/>
-  <title>Web hello</title>
+  <title>Boda Gemma y Mario</title>
  </head>
  <body>
-   <h1>Hello World!!!</h1>
+   <h1>Boda</h1>
  </body>
 </html>
