--- a/boda/src/index.html
+++ b/boda/src/index.html
@@ -1,9 +1,19 @@
+<!DOCTYPE html>
 <html>
- <head>
-  <link rel="stylesheet" href="style.css"/>
-  <title>Boda Gemma y Mario</title>
- </head>
- <body>
-   <h1>Boda</h1>
- </body>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="resolucion">
+	<div class="desktop">
+		<h1>Esto es un ordenador</h1>
+	</div>
+	<div class="tablet">
+		<h1>Esto es un tablet</h1>
+	</div>
+	<div class="movil">
+		<h1>Esto es un movil</h1>
+	</div>
+</div>
+</body>
 </html>
