--- a/boda/src/index.html
+++ b/boda/src/index.html
@@ -2,17 +2,18 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 <div class="resolucion">
 	<div class="desktop">
-		<h1>Esto es un ordenador</h1>
+		<iframe src="./invitados/register.html"/>
 	</div>
 	<div class="tablet">
-		<h1>Esto es un tablet</h1>
+		<iframe src="./invitados/register.html"/>
 	</div>
 	<div class="movil">
-		<h1>Esto es un movil</h1>
+		<iframe src="./invitados/register.html"/>
 	</div>
 </div>
 </body>
